Fix letter spacing on H1

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,6 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 h1, .h1 {
   font-size: 2.5rem;
   font-weight: 200;
-  letter-spacing: -0.05rem;
   line-height: 1.25;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
